<resources>
    <string name="app_name">Daily Dozen</string>
    <string name="beans">Beans</string>
    <string name="berries">Berries</string>
    <string name="other_fruits">Other Fruits</string>
    <string name="cruciferous_vegetables">Cruciferous Vegetables</string>
    <string name="greens">Greens</string>
    <string name="other_vegetables">Other Vegetables</string>
    <string name="flaxseeds">Flaxseeds</string>
    <string name="nuts">Nuts and Seeds</string>
    <string name="spices">Herbs and Spices</string>
    <string name="whole_grains">Whole Grains</string>
    <string name="beverages">Beverages</string>
    <string name="exercise">Exercise</string>
    <string name="vitamin_b12">Vitamin B12</string>
    <string name="serving_sizes">Serving Sizes</string>
    <string name="types">Types</string>
    <string name="history">History</string>
    <string name="servings_some">Some servings</string>
    <string name="servings_all">All servings</string>
    <string name="servings">Servings</string>
    <string name="out_of">out of</string>
    <string name="moving_average">Moving Average</string>
    <string name="about">About</string>
    <string name="about_this_app">About this app</string>
    <string name="latest_videos">Latest Videos</string>
    <string name="url_latest_videos" translatable="false">http://nutritionfacts.org/videos/</string>
    <string name="title_how_not_to_die" translatable="false">How Not to Die</string>
    <string name="url_how_not_to_die" translatable="false">http://nutritionfacts.org/book/</string>
    <string name="title_cookbook" translatable="false">Cookbook</string>
    <string name="url_cookbook" translatable="false">https://nutritionfacts.org/cookbook/</string>
    <string name="title_how_not_to_diet" translatable="false">How Not to Diet</string>
    <string name="url_how_not_to_diet" translatable="false">https://nutritionfacts.org/how-not-to-diet/</string>
    <string name="daily_dozen_challenge" translatable="false">Daily Dozen Challenge</string>
    <string name="url_daily_dozen_challenge" translatable="false">https://nutritionfacts.org/daily-dozen-challenge/</string>
    <string name="donate">Donate</string>
    <string name="url_donate" translatable="false">https://nutritionfacts.org/donate/</string>
    <string name="subscribe">Subscribe</string>
    <string name="url_subscribe" translatable="false">http://nutritionfacts.org/subscribe/</string>
    <string name="open_source">Open Source</string>
    <string name="url_open_source" translatable="false">http://nutritionfacts.org/open-source/</string>
    <string name="nutritionfacts_title" translatable="false">nutritionfacts.org</string>
    <string name="url_nutritionfacts" translatable="false">http://nutritionfacts.org</string>
    <string name="name_john_slavick" translatable="false">John Slavick</string>
    <string name="url_john_slavick" translatable="false">http://johnslavick.com</string>
    <string name="library_activeandroid" translatable="false">ActiveAndroid</string>
    <string name="library_android_iconify" translatable="false">android-iconify</string>
    <string name="library_butterknife">ButterKnife</string>
    <string name="library_eventbus" translatable="false">EventBus</string>
    <string name="library_likeanimation" translatable="false">LikeAnimation</string>
    <string name="library_mpandroidchart" translatable="false">MPAndroidChart</string>
    <string name="url_activeandroid" translatable="false">https://github.com/pardom/ActiveAndroid</string>
    <string name="url_android_iconify" translatable="false">https://github.com/JoanZapata/android-iconify</string>
    <string name="url_butterknife" translatable="false">https://github.com/JakeWharton/butterknife</string>
    <string name="url_eventbus" translatable="false">https://github.com/greenrobot/EventBus</string>
    <string name="url_likeanimation" translatable="false">https://github.com/frogermcs/LikeAnimation/</string>
    <string name="url_mpandroidchart" translatable="false">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="permission_needed_to_write_storage">Can\'t backup without permission to write to storage</string>
    <string name="backup_failed">Backup failed</string>
    <string name="restore_failed">Restore failed</string>
    <string name="backup_success">Backup successful</string>
    <string name="restore_success">Restore successful</string>
    <string name="restore_confirm_title">Restore Backup</string>
    <string name="restore_confirm_message">Any existing data will be deleted before restoring from backup. Do you wish to continue?</string>
    <string name="backup_mimetype" translatable="false">message/rfc822</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="backup">Backup</string>
    <string name="food_info">Food Info</string>
    <string name="food_history">Food History</string>
    <string name="icon_info" translatable="false">{fa-info-circle 12dp @color/gray}</string>
    <string name="icon_calendar" translatable="false">{fa-calendar 16dp @color/gray_dark}</string>
    <string name="num_servings_max" translatable="false">24</string>
    <string name="icon_chart" translatable="false">{fa-bar-chart 20dp @color/gray_dark}</string>
    <string name="daily_servings_history">Daily Servings History</string>
    <string name="no_servings_recorded">You have not recorded any servings yet!</string>
    <string name="task_backup_title">Backing up</string>
    <string name="task_restore_title">Restoring</string>
    <string name="task_calculating_streaks_title">Calculating streaks</string>
    <string name="back_to_today">Back to today</string>
    <string name="debug">Debug</string>
    <string name="debug_clear_data">Clear all data</string>
    <string name="debug_clear_data_message">This will delete all entered Servings. Do you wish to continue?</string>
    <string name="OK">OK</string>
    <string name="dialog_streaks_title">New feature: Streaks!</string>
    <string name="dialog_streaks_message">Your database will now be upgraded to support the new streaks feature.</string>
    <string name="dialog_no_email_apps_title">No email apps found</string>
    <string name="dialog_no_email_apps_message">Backing up your data requires you to have an email app installed so you can email the .csv backup file to yourself. Please install an email app and try again.</string>
    <string name="debug_generate_random_data">Generate random data</string>
    <string name="debug_generate_full_data">Generate full data</string>
    <string name="debug_generate_data_message">All existing data will be replaced. Do you wish to continue?</string>
    <string name="debug_show_reminder_notification" translatable="false">Show Reminder Notification</string>
    <string name="task_generating_random_data">Generating random data</string>
    <string name="task_loading_servings_history_title">Loading Servings History</string>
    <string name="time_scale">Time Scale</string>
    <string name="history_to_generate">History to Generate</string>
    <string name="date_weight_morning" translatable="false">{fa-sun-o 22dp @color/gray_dark}</string>
    <string name="date_weight_evening" translatable="false">{fa-moon-o 22dp @color/gray_dark}</string>
    <string name="date_servings_star" translatable="false">{fa-star 24dp @color/gold}</string>
    <string name="date_servings_star_large" translatable="false">{fa-star 64dp @color/gold}</string>
    <string name="date_weights_eye_open" translatable="false">{fa-eye 24dp @color/gray_dark}</string>
    <string name="date_weights_eye_closed" translatable="false">{fa-eye-slash 24dp @color/gray_dark}</string>
    <string name="date_weights_morning_weight" translatable="false">{fa-square 24dp @color/gray_dark}</string>
    <string name="date_weights_evening_weight" translatable="false">{fa-check-square 24dp @color/gray_dark}</string>
    <string name="unchecked" translatable="false">{fa-square 24dp @color/gray_dark}</string>
    <string name="checked" translatable="false">{fa-check-square 24dp @color/gray_dark}</string>
    <string name="welcome_to_my_daily_dozen">Welcome to my Daily Dozen!</string>
    <string name="activity_welcome_text">Use this app on a daily basis to keep track of the foods I recommend for optimal health and longevity in my book How Not to Die.</string>
    <string name="dialog_ask_user_to_rate_app_title">Do you like this app?</string>
    <string name="dialog_ask_user_to_rate_app_message">Please give us feedback in the Play Store.</string>
    <string name="rate_now">Give Feedback</string>
    <string name="not_now">Not Now</string>
    <string name="format_version" formatted="false">version %s</string>
    <string name="format_num_days" formatted="false">%d days</string>
    <string name="daily_reminder_title">Daily Dozen Reminder</string>
    <string name="daily_reminder_text">Update your servings for today</string>
    <string name="daily_reminder_settings">Daily Reminder Settings</string>
    <string name="enable_daily_reminder">Enable Daily Reminder</string>
    <string name="remind_me_at">Remind me at</string>
    <string name="vibrate">Vibrate</string>
    <string name="play_sound">Play Sound</string>
    <string name="videos">Videos</string>
    <string name="units">Units</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="error_cannot_handle_url">Could not open url. Please install a browser.</string>
    <string name="channel_reminders_name">Reminders</string>
    <string name="twenty_one_tweaks">21 Tweaks</string>
    <string name="tweaks">Tweaks</string>
    <string name="daily_tweaks_history">Daily Tweaks History</string>
    <string name="weight_history">Weight History</string>
    <string name="no_weights_recorded">You have not recorded any weights yet!</string>
    <string name="task_loading_weights_history_title">Loading Weights History</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="weight">Weight</string>
    <string name="tweak_group_meal">At Each Meal</string>
    <string name="tweak_group_daily">Every Day</string>
    <string name="tweak_group_dailydoses">Take your daily doses</string>
    <string name="tweak_group_nightly">Every Night</string>
    <string name="about_tweak">About Tweak</string>
    <string name="meal_water">Preload with Water</string>
    <string name="meal_negcal">Preload with "Negative Calorie" Foods</string>
    <string name="meal_vinegar">Incorporate Vinegar (2 tsp with each meal)</string>
    <string name="meal_undistracted">Enjoy Undistracted Meals</string>
    <string name="meal_twentyminutes">Follow the Twenty-Minute Rule</string>
    <string name="daily_blackcumin">Black Cumin (¼ tsp)</string>
    <string name="daily_garlic">Garlic Powder (¼ tsp)</string>
    <string name="daily_ginger">Ground Ginger (1 tsp) or Cayenne Pepper (½ tsp)</string>
    <string name="daily_nutriyeast">Nutritional Yeast (2 tsp)</string>
    <string name="daily_cumin">Cumin (½ tsp with lunch and dinner)</string>
    <string name="daily_greentea">Green Tea (3 cups)</string>
    <string name="daily_hydrate">Stay Hydrated</string>
    <string name="daily_deflourdiet">Deflour Your Diet</string>
    <string name="daily_frontload">Front-Load Your Calories</string>
    <string name="daily_timerestrict">Time-Restrict Your Eating</string>
    <string name="exercise_timing">Optimize Exercise Timing</string>
    <string name="weigh_twice">Weigh Yourself Twice a Day</string>
    <string name="complete_intentions">Complete Your Implementation Intentions</string>
    <string name="nightly_fast">Fast After 7:00 pm</string>
    <string name="nightly_sleep">Get Sufficient Sleep</string>
    <string name="nightly_trendelenburg">Experiment with Mild Trendelenburg</string>
    <string name="debug_generate_weight_data">Generate Weight Data</string>
</resources>