<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/header"
        style="@style/PrimaryText"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"/>

    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/star"
        android:text="@string/date_servings_star"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/sub_header"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end|bottom">

        <TextView
            android:id="@+id/num_servings"
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/out_of"
            style="@style/SecondaryText"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/num_servings_max"
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.joanzapata.iconify.widget.IconTextView
            android:text="@string/icon_chart"
            style="@style/SecondaryText"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>