<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/header"
        style="@style/PrimaryText"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"/>

    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/eye"
        style="@style/SecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/date_weights_eye_open" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/morning_weight_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/date_weight_morning" />

    <LinearLayout
        android:id="@+id/morning_weight_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/morning_weight"
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:hint="@string/morning"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/morning_weight_hidden_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone" />

    </LinearLayout>

    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/evening_weight_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/date_weight_evening" />

    <LinearLayout
        android:id="@+id/evening_weight_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/evening_weight"
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="end"
            android:hint="@string/evening"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/evening_weight_hidden_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone" />

    </LinearLayout>

    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/weight_history"
        style="@style/SecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/icon_chart" />

</LinearLayout>
