<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/include_toolbar" />

    <Button
        android:id="@+id/debug_clear_data"
        android:text="@string/debug_clear_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/history_to_generate"
            style="@style/PrimaryText"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

        <Spinner
            android:id="@+id/history_to_generate_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/debug_generate_full_data"
        android:text="@string/debug_generate_full_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/debug_generate_random_data"
        android:text="@string/debug_generate_random_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <Button
        android:id="@+id/debug_show_notification"
        android:text="@string/debug_show_reminder_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/debug_progress_bar_container"
        android:visibility="gone"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/debug_progress_text"
            android:textColor="@android:color/white"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/debug_progress_bar"
            android:layout_margin="8dp"
            android:indeterminate="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>