<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    app:flexWrap="wrap"
    app:flexDirection="column"
    app:alignItems="stretch"
    app:alignContent="stretch" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/header"
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/date_servings_star"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sub_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="end|bottom">

        <TextView
            android:id="@+id/num_servings"
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/out_of"
            style="@style/SecondaryText"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/num_servings_max"
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.joanzapata.iconify.widget.IconTextView
            android:text="@string/icon_chart"
            style="@style/SecondaryText"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</com.google.android.flexbox.FlexboxLayout>